crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__char_lowered_to_u32.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 30
    signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalGet:
                  scope_index: 0
                  local_index: 0
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 30
      name: 75
imports: []
memories: []
aggregates: []
static_entries: []
