crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__enum_folded_arithmetic_variant_lowered.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 50
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 2
              ty: I32
      ty: I32
    static_data: []
signatures:
  - items:
      - I32
    params_count: 0
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 50
      name: 80
imports: []
memories: []
aggregates: []
static_entries: []
start_function: ~
