crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__generic_impl_slice_len_method_lowers_correctly.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 54
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 56
                    ty:
                      Function:
                        signature_index: 2
                  arguments:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty:
                        Aggregate:
                          aggregate_index: 0
              ty: U32
      ty: U32
    static_data: []
  - id: 56
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                AggregateGet:
                  scope_index: 0
                  local_index: 0
                  value_index: 1
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - Aggregate:
          aggregate_index: 0
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 54
      name: 90
imports: []
memories:
  - id: 51
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates:
  - values:
      - Pointer:
          memory: 51
      - U32
    offsets:
      - 0
      - 4
    layout:
      size: 8
      align: 4
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
