crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__generic_type_alias_transparent_in_mir.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 47
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                AggregateGet:
                  scope_index: 0
                  local_index: 0
                  value_index: 0
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
      - U32
    params_count: 1
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 47
      name: 76
imports: []
memories: []
aggregates:
  - values:
      - U32
    offsets:
      - 0
    layout:
      size: 4
      align: 4
    decl_to_phys:
      - 0
static_entries: []
start_function: ~
