crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__global_struct_type.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 1
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        Int:
                          value: 0
                      ty: U32
                    - kind:
                        Int:
                          value: 0
                      ty: U32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
    params_count: 0
globals: []
exports:
  - Function:
      id: 1
      name: 5
imports: []
memories: []
aggregates:
  - values:
      - U32
      - U32
strings: []
