crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__i64_extend_i32_lowers_to_i64_extend_i32s.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 45
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: I32
            mutability: Immutable
        result: I64
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                I64ExtendI32S:
                  value:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 0
                    ty: I32
              ty: I64
      ty: I64
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I32
      - I64
    params_count: 1
globals: []
exports:
  - Function:
      id: 45
      name: 72
imports: []
memories: []
aggregates: []
static_entries: []
start_function: ~
